# hand_writing_PoseOptimization

./: CMakeLists.txt  README.md  pose_optimization.cpp
cmake_modules/: FindG2O.cmake
